--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-rm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-rm-form-config.xml
@@ -688,6 +688,26 @@
           </field>
         </appearance>
       </form>
+      <form id="reports-parameters">
+        <field-visibility>
+          <show force="true" id="rep:reportLocales"/>
+          <show force="true" id="rep:reportParameters"/>
+          <show force="true" id="rep:reportTpls"/>
+        </field-visibility>
+        <appearance>
+          <field id="rep:reportLocales" mandatory="false" read-only="false">
+            <control template="/org/alfresco/components/form/controls/mtlangue.ftl"/>
+          </field>
+          <field id="rep:reportParameters" mandatory="false" read-only="false">
+            <control template="/org/alfresco/components/form/controls/checkboxmany.ftl"/>
+          </field>
+          <field id="rep:reportTpls" mandatory="false" read-only="false">
+            <control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+              <control-param name="ds">becpg/autocomplete/targetassoc/associations/rep:reportTpl?excludeProps=rep%3AreportTplIsSystem%7Ctrue%2Crep%3AreportTplIsDisabled%7Ctrue%2Crep%3AreportTplType%7CExportSearch%2Crep%3AreportTplType%7CCompare%2Crep%3AreportTplType%7CSystem</control-param>
+            </control>
+          </field>
+        </appearance>
+      </form>
       <form id="nutList">
         <field-visibility>
           <show for-mode="view" force="true" id="bcpg:nutrientProfilingScore"/>
