InProgess #24278 - [Feature] Add saved search feature

--- a/becpg-plm/becpg-plm-share/src/main/assembly/web/components/product/product-list-toolbar.css
+++ b/becpg-plm/becpg-plm-share/src/main/assembly/web/components/product/product-list-toolbar.css
@@ -29,7 +29,8 @@
 	float: left;
 }
 
-.product-list-toolbar .export-csv span.first-child {
+.product-list-toolbar .export-csv span.first-child,
+.product-list-toolbar .show-thumbnails span.first-child {
 	background-position: 50% 50%;
 	background-repeat: no-repeat;
 	min-height: 16px;
@@ -38,4 +39,9 @@
 
 .product-list-toolbar .export-csv span.first-child {
 	background-image: url(../../components/images/filetypes/xls-file-16.png);
+}
+
+.product-list-toolbar.show-thumbnails span.first-child
+{
+   background: url(../images/filetypes/img-file-16.png);
 }
