Fix #17125 - [Bug] Repair cursor not appearing while hovering filter button

--- a/becpg-share/src/main/assembly/web/modules/entity-datagrid/entity-datagrid.css
+++ b/becpg-share/src/main/assembly/web/modules/entity-datagrid/entity-datagrid.css
@@ -524,6 +524,7 @@ div.filterButtonsBar {
 	background: url(../../components/images/search-16.png) no-repeat 12px
 		4px;
 	padding-left: 24px;
+	cursor: pointer;
 }
 
 
