--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-fp-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-fp-form-config.xml
@@ -34,6 +34,7 @@
           <show force="true" id="bcpg:plants"/>
           <show force="false" id="gs1:organicProductPlaceOfFarmingCode"/>
           <show force="true" id="bcpg:productGeoOrigin"/>
+          <show force="false" id="gs1:provenanceStatement"/>
           <show force="false" id="gs1:targetMarkets"/>
           <show force="false" id="bcpg:clients"/>
           <show force="false" id="bcpg:suppliers"/>
@@ -169,6 +170,7 @@
           <show for-mode="view" force="false" id="bcpg:startEffectivity"/>
           <show for-mode="view" force="false" id="bcpg:endEffectivity"/>
           <show force="false" id="gs1:packagingTypeCode"/>
+          <show force="false" id="gs1:packagingFunctionCode"/>
           <show force="false" id="gs1:height"/>
           <show force="false" id="gs1:width"/>
           <show force="false" id="gs1:depth"/>
@@ -235,6 +237,7 @@
           <show force="false" id="gs1:additionalTradeItemClassification2"/>
           <show force="false" id="gs1:additionalTradeItemClassificationText2"/>
           <show force="false" id="gs1:dataCarrierTypeCode"/>
+          <show force="false" id="gs1:provenanceStatement"/>
           <show force="false" id="bcpg:customsCodeRef"/>
           <show force="false" id="gs1:isTradeItemAVariableUnit"/>
           <show force="false" id="gs1:variableTradeItemType"/>
@@ -421,6 +424,7 @@
           <field id="bcpg:plants" mandatory="false" read-only="false" set="mainInfo"/>
           <field id="gs1:organicProductPlaceOfFarmingCode" mandatory="false" read-only="false" set="mainInfo"/>
           <field id="bcpg:productGeoOrigin" mandatory="false" read-only="false" set="mainInfo"/>
+          <field id="gs1:provenanceStatement" mandatory="false" read-only="false" set="mainInfo"/>
           <field id="gs1:targetMarkets" mandatory="false" read-only="false" set="mainInfo">
             <control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
               <control-param name="showLink">false</control-param>
@@ -757,6 +761,7 @@
           <set id="conditioningTab" label-id="becpg.forms.set.conditioning.label"/>
           <set appearance="bordered-panel" id="primaryPackaging" label-id="becpg.forms.set.primaryPackaging.label" parent="conditioningTab" template="/org/alfresco/components/form/2-column-set.ftl"/>
           <field help-id="becpg.forms.help.gs1.packagingTypeCode" id="gs1:packagingTypeCode" mandatory="false" read-only="false" set="primaryPackaging"/>
+          <field help-id="becpg.forms.help.gs1.packagingFunctionCode" id="gs1:packagingFunctionCode" mandatory="false" read-only="false" set="primaryPackaging"/>
           <field help-id="becpg.forms.help.gs1.height" id="gs1:height" mandatory="false" read-only="false" set="primaryPackaging">
             <control template="/org/alfresco/components/form/controls/number-unit.ftl">
               <control-param name="unit">mm</control-param>
@@ -2334,6 +2339,7 @@
           <show for-mode="view" force="true" id="bcpg:startEffectivity"/>
           <show for-mode="view" force="true" id="bcpg:endEffectivity"/>
           <show force="true" id="gs1:packagingTypeCode"/>
+          <show force="true" id="gs1:packagingFunctionCode"/>
           <show force="true" id="gs1:packagingTypeDescription"/>
           <show force="true" id="gs1:height"/>
           <show force="true" id="gs1:width"/>
@@ -2813,6 +2819,7 @@
           <set id="conditioningTab" label-id="becpg.forms.set.conditioning.label"/>
           <set appearance="bordered-panel" id="primaryPackaging" label-id="becpg.forms.set.primaryPackaging.label" parent="conditioningTab" template="/org/alfresco/components/form/2-column-set.ftl"/>
           <field help-id="becpg.forms.help.gs1.packagingTypeCode" id="gs1:packagingTypeCode" mandatory="false" read-only="false" set="primaryPackaging"/>
+          <field help-id="becpg.forms.help.gs1.packagingFunctionCode" id="gs1:packagingFunctionCode" mandatory="false" read-only="false" set="primaryPackaging"/>
           <field help-id="becpg.forms.help.gs1.height" id="gs1:height" mandatory="false" read-only="false" set="primaryPackaging">
             <control template="/org/alfresco/components/form/controls/number-unit.ftl">
               <control-param name="unit">mm</control-param>
@@ -3218,6 +3225,7 @@
           <show force="false" id="bcpg:startEffectivity"/>
           <show force="false" id="bcpg:endEffectivity"/>
           <show force="false" id="gs1:packagingTypeCode"/>
+          <show force="false" id="gs1:packagingFunctionCode"/>
           <show force="false" id="gs1:packagingTypeDescription"/>
           <show force="false" id="gs1:height"/>
           <show force="false" id="gs1:width"/>
