--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-pm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-pm-form-config.xml
@@ -13,8 +13,8 @@
           
           <show force="true" id="gs1:packagingTypeCode"/>
           <show force="true" id="gs1:packagingTypeDescription"/>
-<!-- 		  <show force="true" id="gs1:packagingFeatureCode"/>
-		  <show force="true" id="gs1:packagingFunctionCode"/> -->
+<!-- 		  <show force="true" id="gs1:packagingFeatureCode"/> -->
+		  <show force="true" id="gs1:packagingFunctionCode"/>
 		 
 		  
           <show force="false" id="bcpg:productState"/>
@@ -121,6 +121,7 @@
           </field>
           
           <field id="gs1:packagingTypeCode" mandatory="false" read-only="false" set="mainInfo"/>
+          <field id="gs1:packagingFunctionCode" mandatory="false" read-only="false" set="mainInfo"/>
           <field id="gs1:packagingTypeDescription" mandatory="false" read-only="false" set="mainInfo">
             <control template="/org/alfresco/components/form/controls/textarea.ftl">
               <control-param name="rows">2</control-param>
@@ -542,6 +543,7 @@
           <show force="true" id="cm:description"/>
           
           <show force="true" id="gs1:packagingTypeCode"/>
+          <show force="true" id="gs1:packagingFunctionCode"/>
           <show force="true" id="gs1:packagingTypeDescription"/>
 
           <show force="true" id="bcpg:productState"/>
@@ -602,6 +604,7 @@
           <show force="true" id="cm:description"/>
           
           <show force="true" id="gs1:packagingTypeCode"/>
+          <show force="true" id="gs1:packagingFunctionCode"/>
           <show force="true" id="gs1:packagingTypeDescription"/>
 
           <show force="true" id="bcpg:productState"/>
