--- a/becpg-project/becpg-project-share/src/main/resources/alfresco/forms/becpg-survey-form-config.xml
+++ b/becpg-project/becpg-project-share/src/main/resources/alfresco/forms/becpg-survey-form-config.xml
@@ -200,7 +200,102 @@
 					</field>
 				</appearance>
 			</form>
-			
+			<form id="create">
+				<field-visibility>
+				    <show id="bcpg:parentLevel" />
+					<show id="survey:questionLabel" />
+					<show id="survey:questionIsMandatory" />
+					<show id="survey:questionIsVisible" />
+					
+					<show id="survey:questionNote" />
+					<show id="survey:questionUpperNote" />
+					<show id="survey:questionLowerNote" />
+					<show id="survey:questionUrl" />
+					<show id="survey:questionCriterion" force="true"/>
+					<show id="survey:questionScore" />
+					
+					<show id="survey:responseType" />
+					<show id="survey:responseCommentType" />
+					<show id="survey:responseCommentLabel" />
+					<show id="survey:nextQuestion" />
+					
+					<show id="survey:fsSurveyListName" force="true" />
+					<show id="survey:fsLinkedCharactRefs" force="true" />
+					<show id="survey:fsLinkedTypes" force="true" />
+					<show id="survey:fsLinkedHierarchy" force="true" />
+				</field-visibility>
+				<appearance>
+					<set id="surveyQuestion" appearance="bordered-panel" label-id="becpg.forms.set.survey-question.label" />
+					<set id="surveyAutogeneration" appearance="bordered-panel" label-id="becpg.forms.set.survey-autogeneration.label" />
+				   
+					<field id="bcpg:parentLevel" set="surveyQuestion">
+						<control template="/org/alfresco/components/form/controls/autocomplete.ftl">
+							<control-param name="ds">becpg/autocomplete/ParentValue?className=survey:surveyQuestion&#38;attributeName=survey:questionLabel</control-param>
+							<control-param name="urlParamsToPass">dataListsName</control-param>
+						</control>
+					</field>
+				   
+				   	<field id="survey:questionLabel" set="surveyQuestion" />
+				
+					<field id="survey:questionIsMandatory" set="surveyQuestion" />
+					
+					<field id="survey:questionIsVisible" set="surveyQuestion" />
+					
+					<field id="survey:questionNote" set="surveyQuestion" />
+					
+					<field id="survey:questionUpperNote" set="surveyQuestion" />
+					
+					<field id="survey:questionLowerNote" set="surveyQuestion" />
+					
+					<field id="survey:questionUrl" set="surveyQuestion" />
+					
+					<field id="survey:questionCriterion" set="surveyQuestion" />
+					
+					<field id="survey:questionScore" set="surveyQuestion" />
+					
+					<field id="survey:responseType" set="surveyQuestion" />
+										
+					<field id="survey:responseCommentType" set="surveyQuestion">
+						<constraint-handlers>
+							<constraint type="MANDATORY" validation-handler="beCPG.forms.validation.hideIf" event='keyup,change@[
+			                  		{"prop":"prop_survey_responseCommentLabel", "condition" : "none"}
+			                  		]'/>
+			            </constraint-handlers>       	
+					</field>
+					
+					<field id="survey:responseCommentLabel" set="surveyQuestion" />
+				
+					<field id="survey:nextQuestion" set="surveyQuestion">
+						<control
+							template="/org/alfresco/components/form/controls/autocomplete-association.ftl" />
+					</field>
+					<field id="survey:fsSurveyListName" set="surveyAutogeneration" />
+					<field id="survey:fsLinkedCharactRefs" set="surveyAutogeneration">
+						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+							<control-param name="ds">becpg/autocomplete/targetassoc/associations/pack:packMaterial</control-param>
+							<control-param name="showTooltip">false</control-param>
+							<control-param name="saveTitle">false</control-param>
+						</control>
+					</field>
+					<field id="survey:fsLinkedTypes" set="surveyAutogeneration">
+						<control template="/org/alfresco/components/form/controls/autocomplete.ftl">
+							<control-param name="ds">becpg/autocomplete/aclType</control-param>
+							<control-param name="showTooltip">false</control-param>
+							<control-param name="saveTitle">false</control-param>
+						</control>
+					</field>
+					<field id="survey:fsLinkedHierarchy" set="surveyAutogeneration">
+						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+							<control-param name="ds">
+								becpg/autocomplete/allLinkedvalue/values/System/ProductHierarchy/bcpg:entityLists
+							</control-param>
+							<control-param name="extraPaths">prop_survey_fsLinkedTypes</control-param>
+							<control-param name="showTooltip">false</control-param>
+							<control-param name="saveTitle">false</control-param>
+						</control>
+					</field>
+				</appearance>
+			</form>
 		</forms>
 	</config>
 	
@@ -208,6 +303,102 @@
 		<forms>
 			<form>
 				<edit-form template="tab-edit" />
+				<field-visibility>
+				    <show id="bcpg:parentLevel" />
+					<show id="survey:questionLabel" />
+					<show id="survey:questionIsMandatory" />
+					<show id="survey:questionIsVisible" />
+					
+					<show id="survey:questionNote" />
+					<show id="survey:questionUpperNote" />
+					<show id="survey:questionLowerNote" />
+					<show id="survey:questionUrl" />
+					<show id="survey:questionCriterion" force="true"/>
+					<show id="survey:questionScore" />
+					
+					<show id="survey:responseType" />
+					<show id="survey:responseCommentType" />
+					<show id="survey:responseCommentLabel" />
+					<show id="survey:nextQuestion" />
+					
+					<show id="survey:fsSurveyListName" force="true" />
+					<show id="survey:fsLinkedCharactRefs" force="true" />
+					<show id="survey:fsLinkedTypes" force="true" />
+					<show id="survey:fsLinkedHierarchy" force="true" />
+				</field-visibility>
+				<appearance>
+					<set id="surveyQuestion" appearance="bordered-panel" label-id="becpg.forms.set.survey-question.label" />
+					<set id="surveyAutogeneration" appearance="bordered-panel" label-id="becpg.forms.set.survey-autogeneration.label" />
+				   
+					<field id="bcpg:parentLevel" set="surveyQuestion">
+						<control template="/org/alfresco/components/form/controls/autocomplete.ftl">
+							<control-param name="ds">becpg/autocomplete/ParentValue?className=survey:surveyQuestion&#38;attributeName=survey:questionLabel</control-param>
+							<control-param name="urlParamsToPass">dataListsName</control-param>
+						</control>
+					</field>
+				   
+				   	<field id="survey:questionLabel" set="surveyQuestion" />
+				
+					<field id="survey:questionIsMandatory" set="surveyQuestion" />
+					
+					<field id="survey:questionIsVisible" set="surveyQuestion" />
+					
+					<field id="survey:questionNote" set="surveyQuestion" />
+					
+					<field id="survey:questionUpperNote" set="surveyQuestion" />
+					
+					<field id="survey:questionLowerNote" set="surveyQuestion" />
+					
+					<field id="survey:questionUrl" set="surveyQuestion" />
+					
+					<field id="survey:questionCriterion" set="surveyQuestion" />
+					
+					<field id="survey:questionScore" set="surveyQuestion" />
+					
+					<field id="survey:responseType" set="surveyQuestion" />
+										
+					<field id="survey:responseCommentType" set="surveyQuestion">
+						<constraint-handlers>
+							<constraint type="MANDATORY" validation-handler="beCPG.forms.validation.hideIf" event='keyup,change@[
+			                  		{"prop":"prop_survey_responseCommentLabel", "condition" : "none"}
+			                  		]'/>
+			            </constraint-handlers>       	
+					</field>
+					
+					<field id="survey:responseCommentLabel" set="surveyQuestion" />
+				
+					<field id="survey:nextQuestion" set="surveyQuestion">
+						<control
+							template="/org/alfresco/components/form/controls/autocomplete-association.ftl" />
+					</field>
+					<field id="survey:fsSurveyListName" set="surveyAutogeneration" />
+					<field id="survey:fsLinkedCharactRefs" set="surveyAutogeneration">
+						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+							<control-param name="ds">becpg/autocomplete/targetassoc/associations/pack:packMaterial</control-param>
+							<control-param name="showTooltip">false</control-param>
+							<control-param name="saveTitle">false</control-param>
+						</control>
+					</field>
+					<field id="survey:fsLinkedTypes" set="surveyAutogeneration">
+						<control template="/org/alfresco/components/form/controls/autocomplete.ftl">
+							<control-param name="ds">becpg/autocomplete/aclType</control-param>
+							<control-param name="showTooltip">false</control-param>
+							<control-param name="saveTitle">false</control-param>
+						</control>
+					</field>
+					<field id="survey:fsLinkedHierarchy" set="surveyAutogeneration">
+						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+							<control-param name="ds">
+								becpg/autocomplete/allLinkedvalue/values/System/ProductHierarchy/bcpg:entityLists
+							</control-param>
+							<control-param name="extraPaths">prop_survey_fsLinkedTypes</control-param>
+							<control-param name="showTooltip">false</control-param>
+							<control-param name="saveTitle">false</control-param>
+						</control>
+					</field>
+				</appearance>
+			</form>
+			<form id="create">
 				<field-visibility>
 				    <show id="bcpg:parentLevel" />
 					<show id="survey:questionLabel" />
