--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-ecm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-ecm-form-config.xml
@@ -159,6 +159,14 @@
 					<show id="ecm:rlLoss" />
 				</field-visibility>
 			</form>
+			
+			<form id="filter">
+                <field-visibility>
+                    <show id="ecm:rlRevisionType" />
+                    <show id="ecm:rlSourceItems" />
+                    <show id="ecm:rlTargetItem" />
+                </field-visibility>
+            </form>
 		</forms>
 	</config>
 	<!-- ecm:replacementList type (existing nodes) -->
@@ -400,6 +408,14 @@
 					<show id="entity_ecm:cclSourceItem_bcpg:product" />
 					<show id="ecm:cclCharact" />	
 				</field-visibility>
+				<appearance>
+				    <field id="ecm:cclCharact" >
+					<control
+	                            template="/org/alfresco/components/form/controls/autocomplete-association.ftl" >
+	                            <control-param name="ds">becpg/autocomplete/eco</control-param>
+	                        </control>      
+                        </field>
+				</appearance>
 			</form>
 		</forms>
 	</config>
