--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-quality-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-quality-form-config.xml
@@ -2130,6 +2130,13 @@
 					<field id="fm:commentCount" label="hidden" read-only="true" />
 				</appearance>
 			</form>
+			
+			<form id="filter">
+                <field-visibility>
+                    <show id="qa:slControlPoint" />
+                    <show id="qa:slControlStep" />
+                </field-visibility>
+            </form>
 		</forms>
 	</config>
 
